# DEzoomcamp

./: .gitignore  .gitmodules  README.md  dbt_project.yml  pyproject.toml
2_docker_sql/: docker-compose.yaml  ingest_data.py  pipeline.py  upload-data.ipynb
2_docker_sql/pgadmin_persistent/: pgadmin4.db
2_docker_sql/pgadmin_persistent/sessions/: bdae0e89-d6fe-4acf-90ed-3f270d140797
homeworks/hw1/docker_sql/: hw1.sql
homeworks/hw1/terraform_gcp/: main.tf
homeworks/hw1/terraform_gcp/terraform/: .terraform.lock.hcl
homeworks/hw2/: green_taxi_to_gcs_parquet.py
homeworks/hw3/: hw3_q_and_a.sql  web_to_gcs.py  week3_lesson_queries.sql
homeworks/hw4/: taxi_data_to_gcs.py  taxi_data_to_gcs_modified.py
homeworks/hw5/code/: Run dataproc spark job with gcloud.txt  environment_variables.txt
models/core/: schema.yml
models/staging/: schema.yml  stg_fhv_tripdata.sql  stg_green_tripdata.sql  stg_yellow_tripdata.sql
week_1/1_terraform_gcp/: variables.tf
week_1/2_docker_sql/: Dockerfile  ingest_data.py  sql_queries  tett
week_1/2_docker_sql/pgadmin_persistent/sessions/: bdae0e89-d6fe-4acf-90ed-3f270d140797
week_2/: Dockerfile  README.md  docker_deploy.py  docker_deploy_hw_q4.py  etl_gcs_to_bq.py  etl_parent_flow-deployment.yaml  etl_parent_gcs_to_bq-deployment.yaml  etl_web_to_gcs.py  fhv_upload.py  ingest_data_flow.py  parametrized_flow.py  parametrized_gcs_to_bq.py
week_2/blocks/: make_docker_block.py  make_gcp_blocks.py
week_3/: Readme.md  big_query_hw.sql
week_4/: Readme.md
