[tool.poetry]
name = "dezoomcamp"
version = "0.1.0"
description = ""
authors = ["alewieland <alexander.wieland.aw@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
dlt = "^0.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
